syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

import "Dto/Item.proto";

package DueyDto;

message DueyPackageDto {
  int32 packageId = 1;
  int32 receiverId = 2;
  int32 senderId = 3;
  int32 mesos = 4;
  google.protobuf.Timestamp timeStamp = 5;
  google.protobuf.StringValue message = 6;
  bool checked = 7;
  bool type = 8;
  Dto.ItemDto item = 9;
  string senderName = 10;
}

message GetPlayerDueyPackageRequest {
	int32 receiverId = 1;
}

message GetPlayerDueyPackageResponse {
	int32 receiverId = 1;
	repeated DueyPackageDto list = 2;
}